cabal-version:      2.4
name:               gi-gio-hs-list-model
version:            0.1.0.0
author:             Akshay Mankar
maintainer:         itsakshaymankar@gmail.com
license:            LGPL-2.1-only
license-file:       LICENSE
extra-source-files: CHANGELOG.md
                  , README.md
                  , cbits/GiGioHsListStore.h
                  , cbits/GiGioHsListItem.h

synopsis:           Haskell implementation of GListModel interface from gi-gio
description:        Haskell implementation of GListModel interface from gi-gio
category:           Graphics

homepage:           https://git.coop/akshay/gi-gio-hs-list-model#gi-gio-hs-list-model
bug-reports:        https://git.coop/akshay/gi-gio-hs-list-model/-/issues
source-repository head
    type:             git
    location:         https://git.coop/akshay/gi-gio-hs-list-model.git

library
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base ^>=4.14.1.0
                    , containers
                    , gi-gio
                    , gi-gobject
                    , haskell-gi-base
    exposed-modules:  Data.GI.Gio.ListModel.CustomStore
                    , Data.GI.Gio.ListModel.SeqStore
    c-sources:        cbits/GiGioHsListStore.c
                    , cbits/GiGioHsListItem.c
    if flag(hlshack)
      include-dirs:   cbits
                    , hls-hack-include
    else
      include-dirs:   cbits

flag hlshack
    description:      Hack for HLS
    default:          False
    manual:           True
