cabal-version:      2.4
name:               gi-gio-hs-list-model
version:            0.1.0.0
author:             Akshay Mankar
maintainer:         itsakshaymankar@gmail.com
extra-source-files: CHANGELOG.md
                  , cbits/GiGioHsListStore.h
                  , cbits/GiGioHsListItem.h

library
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base ^>=4.14.1.0
                    , containers
                    , gi-gio
                    , gi-gobject
                    , haskell-gi-base
    exposed-modules:  Data.GI.Gio.ListModel.CustomStore
                    , Data.GI.Gio.ListModel.SeqStore
    c-sources:        cbits/GiGioHsListStore.c
                    , cbits/GiGioHsListItem.c
    -- if flag(hlshack)
    --   include-dirs:   cbits
    --                 -- ln -s dist-newstyle/build/x86_64-linux/ghc-8.10.4/gi-gio-hs-list-model-<version>/build hls-hack-include
    --                 , hls-hack-include
    -- else
    include-dirs:   cbits

-- Required to get HLS and cabal repl to work. But hackage doesn't like it if
-- the include-dir is missing, so this flag cannot live here.
-- flag hlshack
--     description:      Hack for HLS
--     default:          False
--     manual:           True
